version 2.x - Deathwind Chapel ()

	+ Moved debug setting into config
	+ Updated shellcommand class and added the link to the github repo
	+ Fixed/Updated the creation of the webpage thumbnail using google pagespeed insights api
	+ Fixed search index update
	+ Fixed missing lang property
	+ Fixed xml ex- and import

version 2.8 - Wastelands (2022-12-10)

	+ Fixed documentation
	+ Fixed some PHP 8 defaults
	+ Fixed #17

version 2.7 - Sacred Grove (2022-06-12)

	+ Fixed bug #12. Missing translation key
	+ Adapted some new PHP code formatting
	+ Fixed some translations
	+ Updated bulma css
	+ Added random link page
	+ New syntax in config file. See update.txt for more details
	+ Fixed #13
	+ Fixed #15
	+ Fixed #14
	+ Fixed some small email importer notices and warnings

version 2.6 - Hypostyle (2021-03-21)

	+ Fixed sql problems with Maria DB. Any_value is not supported there
	+ Fixed some query and data loading brain fucks..
	+ Fixed #10. URL is now considered when building search information.
		Update search index from stats view to update all the exiting information
	+ Updated third party information in readme
	+ Fixed xml import xsd
	+ Added translation support. More information in translation.txt

version 2.5.2 - Darkmere (2020-09-12)

	+ Fixed bug #8 It is possible to add empty tags and categories.
		Special chars check done on server side. JS has problems with unicode.
	+ Fixed bug #7 Edit categories/tags. Rename and move
	+ Fixed feature #3 Reduce whitespace in frontend

version 2.5.1 - Caves of Circe (2020-03-22)

	+ Bugfix release

version 2.5 - Winnowing Hall (2020-03-21)

	+ Added a thumbnail by talking to Google page speed API
		Planned was a full page snapshot, but only got the thumbnail.
		Needs some more work with headless chrome.
	+ Instead you can now decide to make a full page screenshot
		using wkhtmltoimage. See documentation about it.
	+ Improved documentation

version 2.4 - Seven Portals (2020-02-16)

    + Now including update instructions