@@ -6,6 +6,7 @@ version 2.x - Deathwind Chapel ()
 	+ Fixed search index update
 	+ Fixed missing lang property
 	+ Fixed xml ex- and import
+	+ Fixed pagination and sort options in all links view
 
 version 2.8 - Wastelands (2022-12-10)
 
